hidden block-md

--- a/landing-pages/articles.html
+++ b/landing-pages/articles.html
@@ -257,7 +257,7 @@
                               <address class="_685omm">Stephanie Granada</address>
                              </div>
                             </div>
-                            <div class="_siy8gh">
+                            <div class="hidden block-md">
                              <button type="button" class="_mloh9aq" style="height: 36px;">
                               <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="Share" role="img" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                <g fill="none">
