--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -32,7 +32,7 @@
                         >
                           <div style="--page-shell-max-content-width: 1280px">
                             <div class="_16grqhk">
-                              <div class="_siy8gh"></div>
+                              <div class="hidden block-md"></div>
                               <main id="site-content">
                                 <form>
                                   <div tabindex="-1">
