--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -31,7 +31,7 @@
                           "
                         >
                           <div style="--page-shell-max-content-width: 1280px">
-                            <div class="_16grqhk">
+                            <div class="page-shell">
                               <div class="hidden block-md"></div>
                               <main id="site-content">
                                 <form>
