--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -50,7 +50,7 @@
                 "
               >
                 <div style="--page-shell-max-content-width: 1600px">
-                  <div class="_16grqhk">
+                  <div class="page-shell">
                     <div class="hidden block-md"></div>
                     <main id="site-content">
                       <nav class="footer-menu__wrapper hidden-md" aria-hidden="false" data-shared-element-id="tab-bar">
