--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -2480,7 +2480,7 @@
               <div data-key="65246614false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246614">
+                    <div class="font-semibold" id="card-availability-title-65246614">
                       Wed, Nov 9
                     </div>
                     <div
@@ -2533,7 +2533,7 @@
               <div data-key="65246615false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246615">
+                    <div class="font-semibold" id="card-availability-title-65246615">
                       Thu, Nov 10
                     </div>
                     <div
@@ -2586,7 +2586,7 @@
               <div data-key="65246616false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246616">
+                    <div class="font-semibold" id="card-availability-title-65246616">
                       Fri, Nov 11
                     </div>
                     <div
@@ -2639,7 +2639,7 @@
               <div data-key="65246617false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246617">
+                    <div class="font-semibold" id="card-availability-title-65246617">
                       Sat, Nov 12
                     </div>
                     <div
@@ -2692,7 +2692,7 @@
               <div data-key="65246618false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246618">
+                    <div class="font-semibold" id="card-availability-title-65246618">
                       Sun, Nov 13
                     </div>
                     <div
@@ -2745,7 +2745,7 @@
               <div data-key="65246619false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246619">
+                    <div class="font-semibold" id="card-availability-title-65246619">
                       Mon, Nov 14
                     </div>
                     <div
@@ -2798,7 +2798,7 @@
               <div data-key="65246620false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246620">
+                    <div class="font-semibold" id="card-availability-title-65246620">
                       Tue, Nov 15
                     </div>
                     <div
@@ -2851,7 +2851,7 @@
               <div data-key="65246621false" class="h-full">
                 <div class="h-full">
                   <div class="_1xk0grw">
-                    <div class="_pgfqnw" id="card-availability-title-65246621">
+                    <div class="font-semibold" id="card-availability-title-65246621">
                       Wed, Nov 16
                     </div>
                     <div
