--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -14500,7 +14500,7 @@
                                     </div>
                                     <div class="_178zopn">
                                       <div>
-                                        <div class="_pgfqnw">
+                                        <div class="font-semibold">
                                           <h3
                                             tabindex="-1"
                                             class="heading-reset"
@@ -14572,7 +14572,7 @@
                                     </div>
                                     <div class="_178zopn">
                                       <div>
-                                        <div class="_pgfqnw">
+                                        <div class="font-semibold">
                                           <h3
                                             tabindex="-1"
                                             class="heading-reset"
