--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -19957,7 +19957,7 @@
                                   </div>
                                   <div class="_178zopn">
                                     <div>
-                                      <div class="_pgfqnw">
+                                      <div class="font-semibold">
                                         <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                           The space
                                         </h3>
@@ -20023,7 +20023,7 @@
                                   </div>
                                   <div class="_178zopn">
                                     <div>
-                                      <div class="_pgfqnw">
+                                      <div class="font-semibold">
                                         <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                           Guest access
                                         </h3>
@@ -26078,7 +26078,7 @@
                                   </div>
                                   <div class="_178zopn">
                                     <div>
-                                      <div class="_pgfqnw">
+                                      <div class="font-semibold">
                                         <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                           The space
                                         </h3>
@@ -26144,7 +26144,7 @@
                                   </div>
                                   <div class="_178zopn">
                                     <div>
-                                      <div class="_pgfqnw">
+                                      <div class="font-semibold">
                                         <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                           Guest access
                                         </h3>
