--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10948,7 +10948,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                             </div>
                           </div>
                           <div class="_5ha52h">
-                            <div class="_pgfqnw">Diana</div>
+                            <div class="font-semibold">Diana</div>
                             <div class="_pnmkcvv">Joined in 2018</div>
                           </div>
                         </div>
