--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -158,7 +158,7 @@
                                     >Watch full video</span
                                   >
                                 </div>
-                                <div class="become-a-host__video-watch-logo">
+                                <div class="mr-2">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -220,7 +220,7 @@
                                 >Watch full video</span
                               >
                             </div>
-                            <div class="become-a-host__video-watch-logo">
+                            <div class="mr-2">
                               <svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
