--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1425,7 +1425,7 @@
                                         Manage all the photos you’ve uploaded.
                                       </div>
                                       <div class="_z8r60f">
-                                        <div class="_14tkmhr">
+                                        <div class="mr-2">
                                           <div class="img-middle" role="img" aria-busy="false"
                                             aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw==" style="
                                                 display: inline-block;
@@ -1466,7 +1466,7 @@
                                                 "></div>
                                           </div>
                                         </div>
-                                        <div class="_14tkmhr">
+                                        <div class="mr-2">
                                           <div class="img-middle" role="img" aria-busy="false"
                                             aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng==" style="
                                                 display: inline-block;
@@ -1507,7 +1507,7 @@
                                                 "></div>
                                           </div>
                                         </div>
-                                        <div class="_14tkmhr">
+                                        <div class="mr-2">
                                           <div class="img-middle" role="img" aria-busy="false"
                                             aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw==" style="
                                                 display: inline-block;
@@ -1548,7 +1548,7 @@
                                                 "></div>
                                           </div>
                                         </div>
-                                        <div class="_14tkmhr">
+                                        <div class="mr-2">
                                           <div class="img-middle" role="img" aria-busy="false"
                                             aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA==" style="
                                                 display: inline-block;
@@ -1589,7 +1589,7 @@
                                                 "></div>
                                           </div>
                                         </div>
-                                        <div class="_14tkmhr">
+                                        <div class="mr-2">
                                           <div class="img-middle" role="img" aria-busy="false"
                                             aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ==" style="
                                                 display: inline-block;
@@ -1630,7 +1630,7 @@
                                                 "></div>
                                           </div>
                                         </div>
-                                        <div class="_14tkmhr">
+                                        <div class="mr-2">
                                           <div class="img-middle" role="img" aria-busy="false"
                                             aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw==" style="
                                                 display: inline-block;
