--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11045,7 +11045,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                             </div>
                                                             <div class="_b453sy"><button type="button" class="btn-link-small">
-                                                                <div class="_5kaapu"><span class="_14tkmhr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                                                <div class="_5kaapu"><span class="mr-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                       aria-hidden="true" role="presentation" focusable="false"
                                                                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                                                       <g fill="none">
@@ -11158,7 +11158,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             </div>
                                                           </div>
                                                           <div class="_b453sy"><button type="button" class="btn-link-small">
-                                                              <div class="_5kaapu"><span class="_14tkmhr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                                              <div class="_5kaapu"><span class="mr-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation" focusable="false"
                                                                     style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                                                     <g fill="none">
