--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -16859,7 +16859,7 @@
                                   <div class="_88xxct">
                                     <div class="_1jdtwz4">
                                       <div class="_c2acbp"><button type="button" class="btn-link-small">
-                                          <div class="flex-items-center"><span class="_14tkmhr"><svg viewBox="0 0 32 32"
+                                          <div class="flex-items-center"><span class="mr-2"><svg viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                 role="presentation" focusable="false"
                                                 style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -16872,7 +16872,7 @@
                                         </button></div>
                                       <div><button aria-label="Add listing to a list"
                                           data-testid="pdp-save-button-unsaved" type="button" class="btn-link-small">
-                                          <div aria-hidden="true" class="flex-items-center"><span class="_14tkmhr"><svg
+                                          <div aria-hidden="true" class="flex-items-center"><span class="mr-2"><svg
                                                 viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                 aria-hidden="true" role="presentation" focusable="false"
                                                 style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
