--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -21407,7 +21407,7 @@
                                         <div class="_c2acbp">
                                           <button type="button" class="btn-link-small" data-modal="#share-modal">
                                             <div class="flex-items-center">
-                                              <span class="_14tkmhr"><svg viewBox="0 0 32 32"
+                                              <span class="mr-2"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false" style="
                                                       display: block;
@@ -21431,7 +21431,7 @@
                                           <button aria-label="Add listing to a list"
                                             data-testid="pdp-save-button-unsaved" type="button" class="btn-link-small">
                                             <div aria-hidden="true" class="flex-items-center">
-                                              <span class="_14tkmhr"><svg viewBox="0 0 32 32"
+                                              <span class="mr-2"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false" style="
                                                       display: block;
