--- a/payments/payment.html
+++ b/payments/payment.html
@@ -369,7 +369,7 @@
                                                     <div class="mr-2">
                                                       <div class="hidden">
                                                         <span
-                                                          class="confirm-pay__trip-detail-rate-wrapper"
+                                                          class="mr-2-wrapper"
                                                         >
                                                           <span
                                                             class="visually-hidden dir dir-ltr"
@@ -415,7 +415,7 @@
                                                       </div>
                                                       <div class="hidden-xl">
                                                         <span
-                                                          class="confirm-pay__trip-detail-rate-wrapper"
+                                                          class="mr-2-wrapper"
                                                         >
                                                           <span
                                                             class="visually-hidden dir dir-ltr"
@@ -6410,11 +6410,11 @@
                                                       class="confirm-pay__trip-detail-review"
                                                     >
                                                       <div
-                                                        class="confirm-pay__trip-detail-rate"
+                                                        class="mr-2"
                                                       >
                                                         <div class="">
                                                           <span
-                                                            class="confirm-pay__trip-detail-rate-wrapper"
+                                                            class="mr-2-wrapper"
                                                           >
                                                             <span
                                                               class="text-highlight dir dir-ltr"
@@ -6423,7 +6423,7 @@
                                                               5; 70 reviews
                                                             </span>
                                                             <span
-                                                              class="confirm-pay__trip-detail-rate-icon"
+                                                              class="mr-2-icon"
                                                             >
                                                               <svg
                                                                 viewBox="0 0 32 32"
@@ -6445,7 +6445,7 @@
                                                               </svg>
                                                             </span>
                                                             <span
-                                                              class="confirm-pay__trip-detail-rate-text"
+                                                              class="mr-2-text"
                                                               aria-hidden="true"
                                                             >
                                                               5.0
