--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -328,7 +328,7 @@
           <div class="_gfomxi">
             <div id="23-row-title" class="_gw4xx4">
               <div class="_1y57zur">
-                <span class="_1nh4eon">Simplified pricing</span
+                <span class="mr-2">Simplified pricing</span
                 ><span class="_1khodb3"><span class="_1etsrbz">NEW</span></span>
               </div>
             </div>
@@ -357,8 +357,8 @@
           <div class="_gfomxi">
             <div id="0-row-title" class="_gw4xx4">
               <div class="_1y57zur">
-                <span class="_1nh4eon">Split-fee pricing</span
-                ><span class="_1nh4eon">(CURRENT SETTING)</span>
+                <span class="mr-2">Split-fee pricing</span
+                ><span class="mr-2">(CURRENT SETTING)</span>
               </div>
             </div>
             <div id="0-row-subtitle" class="_hi9sy">
@@ -841,7 +841,7 @@
                                                         >
                                                           <div class="_1y57zur">
                                                             <span
-                                                              class="_1nh4eon"
+                                                              class="mr-2"
                                                               >Simplified
                                                               pricing</span
                                                             ><span
@@ -896,11 +896,11 @@
                                                         >
                                                           <div class="_1y57zur">
                                                             <span
-                                                              class="_1nh4eon"
+                                                              class="mr-2"
                                                               >Split-fee
                                                               pricing</span
                                                             ><span
-                                                              class="_1nh4eon"
+                                                              class="mr-2"
                                                               >(CURRENT
                                                               SETTING)</span
                                                             >
