--- a/submission/title.html
+++ b/submission/title.html
@@ -1097,7 +1097,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                                   </div>
                                 </div>
                                 <div class="_75y7ds">
-                                  <div class="confirm-pay__trip-detail-rate">
+                                  <div class="mr-2">
                                     <svg
                                       viewBox="0 0 32 32"
                                       xmlns="http://www.w3.org/2000/svg"
