--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -19758,7 +19758,7 @@
                                     <div class="_88xxct">
                                       <div class="_1jdtwz4">
                                         <div class="_c2acbp"><button type="button" class="btn-link-small">
-                                            <div class="flex-items-center"><span class="_14tkmhr"><svg
+                                            <div class="flex-items-center"><span class="mr-2"><svg
                                                   viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false"
                                                   style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -19772,7 +19772,7 @@
                                         <div><button aria-label="Add listing to a list"
                                             data-testid="pdp-save-button-unsaved" type="button" class="btn-link-small">
                                             <div aria-hidden="true" class="flex-items-center"><span
-                                                class="_14tkmhr"><svg viewBox="0 0 32 32"
+                                                class="mr-2"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
                                                   style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
