--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -194,7 +194,7 @@
                       </span></a>
                   </div>
                 </div>
-                <div class="_1udzt2s">
+                <div class="hidden-md">
                   <div class="czkr4ph dir dir-ltr">
                     <nav aria-label="breadcrumb">
                       <ol class="b1wj0iwp dir dir-ltr">
