--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -8118,7 +8118,7 @@
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
         <div class="contents">
           <div role="dialog" aria-label="Dates" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
-            <div class="_1udzt2s">
+            <div class="hidden-md">
               <header class="_1youxq0">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
@@ -8909,7 +8909,7 @@
                     <path d="m6 6 20 20"></path>
                     <path d="m26 6-20 20"></path>
                   </svg></span></button></div>
-            <div class="_1udzt2s">
+            <div class="hidden-md">
               <header class="_1c8aprq">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
