--- a/help/search-tips.html
+++ b/help/search-tips.html
@@ -275,7 +275,7 @@
               </header>
               <div class="p1l24gcu dir dir-ltr">
                 <div class="abe8ors dir dir-ltr">
-                  <div class="_1udzt2s">
+                  <div class="hidden-md">
                     <div class="czkr4ph dir dir-ltr">
                       <nav aria-label="breadcrumb">
                         <ol class="b1wj0iwp dir dir-ltr">
